# atria

./: .dockerignore  .gitignore  .gitmodules  build_registry.py  build_registry.sh  docker-compose.yaml  generate_client.sh  original_explanations.pt  pyproject.toml
atria/conf/task_pipeline/trainer/: image_classification.yaml
notebooks/: load_image_classification_pipeline.ipynb  test.py
notebooks/image_classification/: cifar10_resnet50.ipynb
services/evaluation_agent/: Dockerfile  Dockerfile.dev
services/evaluator_agent/: .dockerignore  Dockerfile  Dockerfile.dev  main.py
services/explainer_agent/: Dockerfile  Dockerfile.dev  main.py
